# semver-utils

./: .gitignore  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  Makefile.am  NEWS  README.cmake  README.codestyle  README.gnu-build-system  README.md  check_exit_code.sh  configure.ac  index.html  params.json
.github/workflows/: autotools.yml  cmake.yml  release-tarball.yml
doc/: index.html
doc/1.0.0/: index.html
doc/1.0.0/html/: annotated.html  classes.html  classsemver_1_1version-members.html  classsemver_1_1version.html  dir_405ac1a095c09b4bf5a3fca3490b3a42.html  dir_a28d9fd22d1f22ee95328c86e532a620.html  dir_b02f8677f299e991227bc7bf3f82e11d.html  dir_f0ce62cb3c2110c6da45477fe30b5d49.html  errors_8h_source.html  files.html  functions.html  functions_func.html  gettext_8h_source.html  gettext__defs_8h_source.html  history.html  index.html  libsemver_8cpp.html  libsemver_8h.html  libsemver_8h_source.html  namespaces.html  namespacesemver.html  pages.html  structsemver__t-members.html  structsemver__t.html  version_8hpp.html  version_8hpp_source.html
doc/1.0.0/html/search/: all_0.js  all_1.js  classes_1.js
doc/1.0.0/pdf/: index.html
doc/1.0.1/: index.html
doc/1.0.1/html/: annotated.html  classes.html  classsemver_1_1version-members.html  classsemver_1_1version.html  dir_405ac1a095c09b4bf5a3fca3490b3a42.html  dir_a28d9fd22d1f22ee95328c86e532a620.html  dir_b02f8677f299e991227bc7bf3f82e11d.html  dir_f0ce62cb3c2110c6da45477fe30b5d49.html  errors_8h_source.html  files.html  functions.html  functions_func.html  gettext_8h_source.html  gettext__defs_8h_source.html  history.html  index.html  libsemver_8cpp.html  libsemver_8h.html  libsemver_8h_source.html  namespaces.html  namespacesemver.html  pages.html  structsemver__t-members.html  structsemver__t.html  version_8hpp.html  version_8hpp_source.html
doc/1.0.1/html/search/: classes_0.js  files_0.js  searchdata.js
doc/1.1.0/: index.html
doc/1.1.0/html/: annotated.html  classes.html  classsemver_1_1version-members.html  classsemver_1_1version.html  dir_405ac1a095c09b4bf5a3fca3490b3a42.html  dir_a28d9fd22d1f22ee95328c86e532a620.html  dir_b02f8677f299e991227bc7bf3f82e11d.html  dir_f0ce62cb3c2110c6da45477fe30b5d49.html  errors_8h_source.html  files.html  functions.html  functions_func.html  gettext_8h_source.html  gettext__defs_8h_source.html  history.html  index.html  libsemver_8cpp.html  libsemver_8h.html  libsemver_8h_source.html  namespaces.html  namespacesemver.html  pages.html  structsemver__t-members.html  structsemver__t.html  version_8hpp.html  version_8hpp_source.html
doc/1.1.0/html/search/: namespaces_0.js
doc/1.1.1/: index.html
doc/1.1.1/html/: annotated.html  classes.html  classsemver_1_1prerelease__component-members.html  classsemver_1_1prerelease__component.html  classsemver_1_1version-members.html  classsemver_1_1version.html  dir_405ac1a095c09b4bf5a3fca3490b3a42.html  dir_a28d9fd22d1f22ee95328c86e532a620.html  dir_b02f8677f299e991227bc7bf3f82e11d.html  dir_f0ce62cb3c2110c6da45477fe30b5d49.html  errors_8h_source.html  files.html  functions.html  functions_func.html  gettext_8h_source.html  gettext__defs_8h_source.html  history.html  index.html  libsemver_8cpp.html  libsemver_8h.html  libsemver_8h_source.html  namespaces.html  namespacesemver.html  pages.html  structsemver__t-members.html  structsemver__t.html  version_8hpp.html  version_8hpp_source.html
doc/1.1.1/html/search/: all_6.js  all_8.js  all_9.js  functions_5.js  functions_6.js  searchdata.js
doc/1.1.2/: index.html
doc/1.1.2/html/: annotated.html  classes.html  classsemver_1_1prerelease__component-members.html  classsemver_1_1prerelease__component.html  classsemver_1_1version-members.html  classsemver_1_1version.html  dir_405ac1a095c09b4bf5a3fca3490b3a42.html  dir_a28d9fd22d1f22ee95328c86e532a620.html  dir_b02f8677f299e991227bc7bf3f82e11d.html  dir_f0ce62cb3c2110c6da45477fe30b5d49.html  errors_8h_source.html  files.html  functions.html  functions_func.html  gettext_8h_source.html  gettext__defs_8h_source.html  history.html  index.html  libsemver_8cpp.html  libsemver_8h.html  libsemver_8h_source.html  namespaces.html  namespacesemver.html  pages.html  structsemver__t-members.html  structsemver__t.html  version_8hpp.html  version_8hpp_source.html
doc/1.1.2/html/search/: all_7.js  functions_2.js  functions_3.js
doc/doxygen/: Makefile.am
m4/: libsemver_version.m4
po/: LINGUAS  POTFILES.in  en.po  en@boldquot.po  en@quot.po  es.po  it.po  libsemver.pot  semver-utils.pot
src/libsemver/: Makefile.am  gettext_defs.h
src/libsemver/c/: errors.h  libsemver.cpp  libsemver.h
src/libsemver/c++/: version.cpp  version.hpp
src/semver/: Makefile.am  semver.cpp
